<resources>
    <string name="app_name">Plustrack_android</string>
    <string name="text_crear_compte">o crear compte</string>
    <string name="text_fer_login">o fer login</string>
    <string name="Inici">Inici</string>
    <string name="Paquets">Paquets</string>
    <string name="Perfil">Perfil</string>
    <string name="Preguntes_frequents">Preguntes frequents</string>
    <string name="Que_es_plustrack">Que és PlusTrack?</string>
    <string name="Que_es_plustrack_resposta">Som una empresa que permet tenir un seguiment en temps real de l’estat dels productes enviats.</string>
    <string name="Com_funciona_resposta">Cada producte se li assigna un identificador unic que permet ser rastrejat.</string>
    <string name="Com_funciona">Com funciona?</string>
    <string name="Es_segur">És segur?</string>
    <string name="Es_segur_resposta">Si, ja que encriptem l’informació, garantint que només tu puguis accedir a l’estat del producte.</string>
    <string name="Per_a_qui_es">Per a qui és aquest servei?</string>
    <string name="Per_a_qui_es_resposta">El nostre servei està pensat per empreses que necessitin gestionar les entregues dels seus productes i per els seus clients, estar al tant de l’estat de la seva comanda.</string>
    <string name="Noticies">Noticies</string>
    <string name="Contactar">Contactar</string>
    <string name="Info_contactar">
        "Si desitges contactar amb nosaltres per els nostres projectes o serveis, omple el formulari i ens posarem en contacte amb vosté el mes aviat possible.\n\n
        <b>Seu principal:</b> Carrer de Balmes, 123, 08008\n\n
        <b>Telefon:</b> +34 938 75 32 14\n\n
        <b>Email:</b> plustrack@gethelp.com"
    </string>
    <string name="Contactar_inici">Contactar amb PlusTrack</string>
    <string name="Noticies_inici">Noticies de nosaltres</string>
    <string name="Faqs_inici">Preguntes frequents</string>
    <string name="id_paquet">ID del paquet</string>
    <string name="Data_estimada">Data estimada per entregar</string>
    <string name="Recollit">Recollit</string>
    <string name="En_transit">En transit</string>
    <string name="Repartint">Repartint</string>
    <string name="Entregat">Entregat</string>
    <string name="Dades_receptor">Dades del receptor</string>
    <string name="Cambiar_direccion">Cambiar direcció</string>
    <string name="Nom">Nom</string>
    <string name="Telefon">Telefon</string>
    <string name="Missatge">Missatge</string>
    <string name="Enviar">Enviar</string>
    <string name="IdPaquet">ID del paquet</string>
    <string name="Entrar">Entrar</string>
    <string name="Registrar">Registrar</string>
    <string name="Seguent_paquet">Seguent paquet</string>
    <string name="Detall">Detalls</string>
    <string name="Total_paquets">Total de paquets a entregar</string>
    <string name="Paquet_entregat">Paquet entregat</string>
    <string name="Paquet_no_entregat">Paquet no entregat</string>
    <string name="Tornar">Tornar</string>
    <string name="Google_Maps">Passar a Google Maps</string>
</resources>