<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color">

    <TextView
        android:id="@+id/titol_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Contactar"
        android:fontFamily="@font/jost_bold"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/cuadradoBlanco"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="#F0F0F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titol_fragment"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/Id_paquet_titol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/IdPaquet"
        android:fontFamily="@font/jost_regular"
        app:layout_constraintTop_toBottomOf="@+id/titol_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/Id_paquet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="0000000"
        android:fontFamily="@font/jost_bold"
        app:layout_constraintTop_toBottomOf="@+id/Id_paquet_titol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnEntregat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="70dp"
        android:background="@drawable/edittext_rounded_total"
        android:text="@string/Paquet_entregat"
        android:textColor="#000000"
        android:textSize="18sp"
        android:padding="10dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jost_regular"
        app:layout_constraintTop_toTopOf="@+id/Id_paquet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnNoEntregat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="70dp"
        android:background="@drawable/edittext_rounded_total"
        android:text="@string/Paquet_no_entregat"
        android:textColor="#000000"
        android:textSize="18sp"
        android:padding="10dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jost_regular"
        app:layout_constraintTop_toBottomOf="@+id/btnEntregat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/btnTornar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="100dp"
        android:background="@drawable/edittext_rounded_total"
        android:text="@string/Tornar"
        android:textColor="#000000"
        android:textSize="18sp"
        android:padding="10dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/jost_regular"
        app:layout_constraintTop_toBottomOf="@+id/btnNoEntregat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>