<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_short">

    <ImageView
        android:id="@+id/logo_plustrack"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="36dp"
        android:src="@drawable/logo_plustrack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cuadradoBlanco"
        android:layout_width="420dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="#F0F0F0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_plustrack" />

<!--    <ImageView-->
<!--        android:id="@+id/foto_inici"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="205dp"-->
<!--        android:src="@drawable/foto_inici"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/logo_plustrack"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"/>-->

    <FrameLayout
        android:id="@+id/frameBuscarId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cuadradoBlanco"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/etIdProducte"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_total"
            android:fontFamily="@font/jost_regular"
            android:hint="@string/IdPaquet"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp"/>

        <ImageButton
            android:id="@+id/btnCercar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/border_top_bottom_white"
            android:scaleType="fitCenter"
            android:src="@drawable/lupa"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameContactar"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frameBuscarId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:id="@+id/btnContactar"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/border_top_bottom_white"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/jost_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Contactar_inici"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imgTelefon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="45dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/llamar" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameNoticies"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/frameContactar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/btnNoticies"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/border_top_bottom_white"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/jost_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Noticies_inici"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imgNoticies"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/periodico" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameFAQs"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/frameNoticies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/btnFAQs"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/border_top_bottom_white"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/jost_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Preguntes_frequents"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/imgFAQs"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="5dp"
            android:background="#FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/search_engine_optimization" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>